--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,9 @@ endif()
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 set(SOURCE
   ${PROJECT_SOURCE_DIR}/src/main.cpp
-  ${PROJECT_SOURCE_DIR}/src/tokenizer.cpp)
+  ${PROJECT_SOURCE_DIR}/src/tokenizer.cpp
+  ${PROJECT_SOURCE_DIR}/src/parser.cpp
+  ${PROJECT_SOURCE_DIR}/src/node.cpp)
 
 add_executable(dot_screen_saver
   ${SOURCE}) 
